--- a/ng-diogenes/src/app/pages/inventory/inventory.component.html
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.html
@@ -1,26 +1,4 @@
-<div id="filter-container">
-    <div class="filter-group">
-        <label for="nameFilter">Name:</label>
-        <input type="text" id="nameFilter" [(ngModel)]="nameFilter">
-    </div>
-    <div class="filter-group">
-        <label for="numberFilter">Number:</label>
-        <input type="text" id="numberFilter" [(ngModel)]="numberFilter">
-    </div>
-    <div class="filter-group">
-        <label for="descriptionFilter">Description:</label>
-        <input type="text" id="descriptionFilter"
-            [(ngModel)]="descriptionFilter">
-    </div>
-    <!-- <div class="filter-group">
-      <label for="categoryFilter">Filter by Category:</label>
-      <select id="categoryFilter" [(ngModel)]="categoryFilter">
-        <option value="">All Categories</option>
-        <option *ngFor="let category of categories" [value]="category">{{ category }}</option>
-      </select>
-    </div> -->
-    <button class="filter-button" (click)="applyFilters()">Apply Filters</button>
-</div>
+<app-inventory-filter (filterItems)="onFilterItems($event)"></app-inventory-filter>
 
 <div *ngIf="isLoading; else notLoading">
     <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
