[FEATURE] Harmonize styling

--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.scss
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.scss
@@ -16,8 +16,9 @@
     background-color: #333;
     color: #fff;
     border: none;
-    padding: 8px 16px;
-    margin-right: 10px;
+    margin-left: 10px;
+    padding: 5px 10px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
@@ -55,8 +56,9 @@
     background-color: #007bff;
     color: #fff;
     border: none;
-    padding: 8px 16px;
     margin-left: 10px;
+    padding: 5px 10px;
+    border-radius: 4px;
     cursor: pointer;
 }
 
