--- a/ng-diogenes/src/app/pages/inventory/inventory.component.html
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.html
@@ -1,5 +1,9 @@
-<app-inventory-filter (filterItems)="onFilterItems($event)"></app-inventory-filter>
-
+<div class="control-container">
+    <app-inventory-filter (filterItems)="onFilterItems($event)"></app-inventory-filter>
+    <div class="new-item-container">
+        <button class="new-item-button" (click)="onCreateNewItem()">New item</button>
+    </div>
+</div>
 <div *ngIf="isLoading; else notLoading">
     <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
 </div>
