--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="isLoading; else notLoading">
     <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
 </div>
+
 <ng-template #notLoading>
 
     <div class="item-container" *ngIf="item; else notFound">
@@ -24,7 +25,7 @@
             </div>
         </div>
         <div class="actions">
-            <button class="edit-button">Edit</button>
+            <button (click)="onEditItem()" class="edit-button">Edit</button>
             <button class="delete-button">Delete</button>
         </div>
     </div>
