--- a/ng-diogenes/src/app/pages/inventory/inventory.component.scss
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.scss
@@ -1,10 +1,21 @@
-.control-container {
+.header-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.new-item-container{
+.select-items-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.sorter-wrapper {
+    display: flex;
+    align-self: center;
+}
+
+.new-item-container {
     padding: 10px;
 }
 
