--- a/ng-diogenes/src/app/components/inventory-filter/text-filter/text-filter.component.scss
+++ b/ng-diogenes/src/app/components/inventory-filter/text-filter/text-filter.component.scss
@@ -1,15 +1,3 @@
-.filter-group label {
+.text-filter-wrapper {
     margin-right: 10px;
-    font-weight: bold;
-}
-
-.error-message {
-    color: #f00;
-    font-size: 12px;
-}
-
-.error-container {
-    padding-top: 0.3rem;
-    display: flex;
-    flex-direction: column;
 }
