--- a/ng-diogenes/src/app/components/inventory-sorter/inventory-sorter.component.scss
+++ b/ng-diogenes/src/app/components/inventory-sorter/inventory-sorter.component.scss
@@ -12,11 +12,11 @@
 }
 
 .arrow-up {
-  border-bottom: 5px solid #000;
+  border-bottom: 5px solid #fff;
 }
 
 .arrow-down {
-  border-top: 5px solid #000;
+  border-top: 5px solid #fff;
 }
 
 .custom-dropdown {
