--- a/ng-diogenes/src/app/components/inventory-filter/text-filter/text-filter.component.html
+++ b/ng-diogenes/src/app/components/inventory-filter/text-filter/text-filter.component.html
@@ -1,19 +1,19 @@
-<div class="filter-group" *ngIf="filterName && formControl">
-    <div>
-        <label for="filter-{{filterName}}">{{filterName | capitalizeFirstLetter
-            }}:</label>
-        <input type="text" id="filter-{{filterName}}"
-            [formControl]="formControl">
-    </div>
-    <!-- Display on error -->
-    <div
-        *ngIf="formControl.invalid && (formControl.dirty || formControl.touched)"
-        class="error-container">
-        <div class="error-message" *ngIf="formControl.errors">
-            <!-- Loop through validation errors and display corresponding messages -->
-            <div *ngFor="let key of formControl.errors | keys">
+<div class="text-filter-wrapper" *ngIf="filterName && formControl">
+
+    <mat-form-field>
+
+        <mat-label>{{filterName | capitalizeFirstLetter}}</mat-label>
+        <input matInput type="text" [formControl]="formControl"
+            id="filter-{{filterName}}">
+
+        <!-- Display errors -->
+        <mat-error
+            *ngIf="formControl.invalid && (formControl.dirty || formControl.touched) && formControl.errors">
+            <span *ngFor="let key of formControl.errors | keys">
                 {{ getErrorMessage(key) }}
-            </div>
-        </div>
-    </div>
+            </span>
+        </mat-error>
+
+    </mat-form-field>
+
 </div>
