--- a/ng-diogenes/src/app/pages/inventory/inventory.component.html
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.html
@@ -1,14 +1,22 @@
-<div class="header-container">
-    <div class="select-items-container">
-        <app-inventory-filter (filterItems)="onFilterItems($event)"></app-inventory-filter>
-        <div class="sorter-wrapper">
+<mat-toolbar>
+    <mat-toolbar-row>
+        xxxx
+    </mat-toolbar-row>
+    <mat-toolbar-row class="extended-size-row">
+        <div class="select-items-container">
+            <app-inventory-filter (filterItems)="onFilterItems($event)"></app-inventory-filter>
             <app-inventory-sorter (sortItems)="onSortItems($event)"></app-inventory-sorter>
         </div>
-    </div>
-    <div class="new-item-container">
-        <button class="new-item-button" (click)="onCreateNewItem()">New item</button>
-    </div>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<!-- Show a add item as float action button -->
+<div class="fab-container">
+    <button mat-fab color="primary"
+        (click)="onCreateNewItem()"><mat-icon>add</mat-icon></button>
 </div>
+
+<!-- Show inventory -->
 <div *ngIf="isLoading; else notLoading">
     <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
 </div>
