--- a/ng-diogenes/src/app/components/loading-spinner/loading-spinner.component.html
+++ b/ng-diogenes/src/app/components/loading-spinner/loading-spinner.component.html
@@ -1,3 +1,3 @@
-<div class="loading-indicator" [ngClass]="{'active': isLoading}">
-    <div class="spinner"></div>
+<div class="spinner-container">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
 </div>
