--- a/ng-diogenes/src/app/components/loading-spinner/loading-spinner.component.scss
+++ b/ng-diogenes/src/app/components/loading-spinner/loading-spinner.component.scss
@@ -1,31 +1,6 @@
-.loading-indicator {
+.spinner-container {
     display: flex;
-    align-items: center;
     justify-content: center;
-    padding: 10px;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 4px;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-    pointer-events: none; /* Prevent clicks on the spinner */
-    position: relative;
-}
-
-.loading-indicator.active {
-    opacity: 1;
-}
-
-.spinner {
-    border: 3px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #000;
-    animation: spin 1s linear infinite;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    position: absolute;
-}
-
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    align-items: center;
+    height: 100vh;
 }
