--- a/ng-diogenes/src/app/pages/edit-item/edit-item.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/edit-item.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isLoading; else notLoading">
-    <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+    <app-loading-spinner></app-loading-spinner>
 </div>
 
 <ng-template #notLoading>
