--- a/ng-diogenes/src/app/pages/inventory/inventory.component.html
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.html
@@ -18,13 +18,15 @@
 
 <!-- Show inventory -->
 <div *ngIf="isLoading; else notLoading">
-    <app-loading-spinner [isLoading]="isLoading"></app-loading-spinner>
+    <app-loading-spinner></app-loading-spinner>
 </div>
 <ng-template #notLoading>
     <div id="item-list">
         <div *ngFor="let item of items">
             <app-item-in-list [item]="item" (itemDeleted)="onDeleteItem($event)"></app-item-in-list>
         </div>
-        <app-loading-spinner [isLoading]="fetchingInProgress"></app-loading-spinner>
+        <div *ngIf="fetchingInProgress">
+            <app-loading-spinner></app-loading-spinner>
+        </div>
     </div>
 </ng-template>
