[FEATURE] Add functionality to delete button in item detail view

--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
@@ -46,7 +46,7 @@
                     <mat-icon>edit</mat-icon>
                 </button>
 
-                <button mat-icon-button aria-label="Delete item">
+                <button mat-icon-button aria-label="Delete item" (click)="onDeleteItem()">
                     <mat-icon>delete</mat-icon>
                 </button>
 
