--- a/ng-diogenes/src/app/pages/edit-item/edit-item.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/edit-item.component.html
@@ -38,6 +38,7 @@
                     <mat-form-field>
                         <mat-label>Description</mat-label>
                         <textarea matInput formControlName="description"
+                            class="textarea-height"
                             maxlength="2000"></textarea>
                     </mat-form-field>
 
