[FIX] Fix text overflow

--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
@@ -30,7 +30,7 @@
 
             <!-- Content -->
             <mat-card-content>
-                <p>{{ item.description }}</p>
+                <p class="no-overflow">{{ item.description }}</p>
                 <div class="item-metadata">
                     <p>Number of items: {{ item.number }}</p>
                     <p>Last Updated: {{ item.updatedOn | date:'medium' }}</p>
