[FEATURE] Create categories detail and edit categorie components

--- a/ng-diogenes/src/app/pages/categories/categories.component.html
+++ b/ng-diogenes/src/app/pages/categories/categories.component.html
@@ -1,8 +1,13 @@
 <mat-toolbar>
     <mat-toolbar-row>
-        <button mat-button (click)="onNavigateBack()">
-            <mat-icon>arrow_back</mat-icon>
-        </button>
+        <div>
+            <button mat-button (click)="onNavigateBack()">
+                <mat-icon>arrow_back</mat-icon>
+            </button>
+        </div>
+        <div>
+            Categories
+        </div>
     </mat-toolbar-row>
 </mat-toolbar>
 
