--- a/ng-diogenes/src/app/components/inventory-filter/inventory-filter.component.html
+++ b/ng-diogenes/src/app/components/inventory-filter/inventory-filter.component.html
@@ -1,11 +1,13 @@
 <form [formGroup]="form" (ngSubmit)="onApplyFilters()">
     <div class="filter-container">
         <app-text-filter [filterName]="nameFilterName"
-            [formControl]="getFilterControl(nameFilterName)"></app-text-filter>
+            [control]="getFilterControl(nameFilterName)"></app-text-filter>
         <app-text-filter [filterName]="numberFilterName"
-            [formControl]="getFilterControl(numberFilterName)"></app-text-filter>
+            [control]="getFilterControl(numberFilterName)"></app-text-filter>
         <app-text-filter [filterName]="descriptionFilterName"
-            [formControl]="getFilterControl(descriptionFilterName)"></app-text-filter>
+            [control]="getFilterControl(descriptionFilterName)"></app-text-filter>
+        <app-select-filter [filterName]="'category'"
+            [control]="getFilterControl(categoryIdFilterName)" [options]="categories | generateSelectBoxOptions"></app-select-filter>
 
         <div class="action-container">
             <button mat-raised-button color="primary" type="submit">Apply Filters</button>
