--- a/ng-diogenes/src/app/pages/inventory/inventory.component.html
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.html
@@ -1,7 +1,10 @@
 <mat-toolbar>
     <mat-toolbar-row>
         <div class="select-items-container">
-            xxxx
+            <span class="logo-container">
+                <img class="logo" src="assets/logo/logo_transparent.png" alt="Logo">
+                Diogenes
+            </span>
             <app-inventory-menu></app-inventory-menu>
         </div>
     </mat-toolbar-row>
