--- a/ng-diogenes/src/app/pages/inventory/inventory.component.scss
+++ b/ng-diogenes/src/app/pages/inventory/inventory.component.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
 }
 
-.extended-size-row{
+.extended-size-row {
     min-height: 80px;
 }
 
@@ -14,4 +14,15 @@
     bottom: 20px;
     right: 20px;
     z-index: 1;
+}
+
+.logo {
+    width: 50px;
+    height: 50px;
+    margin-right: 0.5rem;
+}
+
+.logo-container {
+    display: flex;
+    align-items: center;
 }
