--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
@@ -30,7 +30,8 @@
 
             <!-- Content -->
             <mat-card-content>
-
+                
+                <!-- Image -->
                 <div class="item-image-container item-metadata" *ngIf="item.imagePath">
                     <img src="{{item.imagePath}}"
                         class="item-image"
