--- a/ng-diogenes/src/app/pages/inventory/components/item-in-list/item-in-list.component.scss
+++ b/ng-diogenes/src/app/pages/inventory/components/item-in-list/item-in-list.component.scss
@@ -1,9 +1,10 @@
 .card {
     margin: 10px;
 }
-.card:hover{
-    border: 1px solid black; 
-    box-shadow: 8px 8px 2px 1px #7b1fa21a; 
+
+.card:hover {
+    border: 1px solid black;
+    box-shadow: 8px 8px 2px 1px #7b1fa21a;
 }
 
 .card-header {
@@ -23,4 +24,8 @@
 .item-number-label {
     font-weight: bold;
     font-size: smaller;
+}
+
+.item-image {
+    vertical-align: middle;
 }
