[FEATURE] Allow creating multiple items at the same time by bulk importing images

--- a/ng-diogenes/src/app/pages/inventory/components/inventory-menu/inventory-menu.component.html
+++ b/ng-diogenes/src/app/pages/inventory/components/inventory-menu/inventory-menu.component.html
@@ -4,4 +4,5 @@
 <!-- Displayed on open menu -->
 <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="onNavigateToCategories()">Categories</button>
+    <button mat-menu-item (click)="onNavigateToBulkImport()">Create from images</button>
 </mat-menu>
