--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.scss
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.scss
@@ -25,11 +25,14 @@
     max-height: 40rem;
     justify-content: center;
     display: flex;
+    overflow: scroll;
+    align-items: center;
+    position: relative;
 }
 
 .item-image {
-    width: 100%;
-    height: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .item-description {
