[FEATURE] Implement authentication in angular

--- a/ng-diogenes/src/app/pages/inventory/components/inventory-menu/inventory-menu.component.html
+++ b/ng-diogenes/src/app/pages/inventory/components/inventory-menu/inventory-menu.component.html
@@ -5,4 +5,5 @@
 <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="onNavigateToCategories()">Categories</button>
     <button mat-menu-item (click)="onNavigateToBulkImport()">Create from images</button>
+    <button mat-menu-item (click)="onLogout()">Logout</button>
 </mat-menu>
