--- a/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
+++ b/ng-diogenes/src/app/pages/item-detail/item-detail.component.html
@@ -33,7 +33,7 @@
                 
                 <!-- Image -->
                 <div class="item-image-container item-metadata" *ngIf="item.imagePath">
-                    <img src="{{item.imagePath}}"
+                    <img [attr.src]="item.imagePath | secureImage | async"
                         class="item-image"
                         alt="item-image">
                 </div>
