--- a/ng-diogenes/src/app/pages/edit-item/components/edit-item-image/edit-item-image.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/components/edit-item-image/edit-item-image.component.html
@@ -7,7 +7,7 @@
 <!-- Show actual image -->
 <div class="item-image-container"
     *ngIf="imagePath && !selectedImage; else addNewImageTemplate">
-    <img src="{{imagePath}}"
+    <img [attr.src]="imagePath | secureImage | async"
         class="item-image"
         alt="item-image">
     <div class="item-image-buttons-container">
