--- a/ng-diogenes/src/app/pages/login/login.component.html
+++ b/ng-diogenes/src/app/pages/login/login.component.html
@@ -1,22 +1,32 @@
-<div class="login-container">
-    <mat-card class="center-content">
-        <div class="logo-container">
-            <img class="logo" src="assets/logo/logo_transparent.png" alt="Logo">
-        </div>
-        <form (ngSubmit)="login()">
-            <mat-form-field class="form-group">
-                <mat-label for="username">Username</mat-label>
-                <input matInput type="text" id="username" name="username"
-                    [(ngModel)]="username" required>
-            </mat-form-field>
-            <mat-form-field class="form-group">
-                <mat-label for="password">Password</mat-label>
-                <input matInput type="password" id="password" name="password"
-                    [(ngModel)]="password" required>
-            </mat-form-field>
-            <div>
-                <button mat-button type="submit">Login</button>
-            </div>
-        </form>
-    </mat-card>
+<div *ngIf="isLoading; else notLoading">
+    <app-loading-spinner></app-loading-spinner>
 </div>
+<ng-template #notLoading>
+
+    <div class="login-container">
+        <mat-card class="center-content">
+            <div class="logo-container">
+                <img class="logo" src="assets/logo/logo_transparent.png"
+                    alt="Logo">
+            </div>
+            <form (ngSubmit)="login()" [formGroup]="form">
+                <mat-form-field class="form-group">
+                    <mat-label for="username">Username</mat-label>
+                    <input matInput type="text" id="username" name="username"
+                        formControlName="username">
+                </mat-form-field>
+                <mat-form-field class="form-group">
+                    <mat-label for="password">Password</mat-label>
+                    <input matInput type="password" id="password"
+                        name="password"
+                        formControlName="password">
+                </mat-form-field>
+                <div>
+                    <button mat-button type="submit" [disabled]="form.invalid">Login</button>
+                </div>
+                <div class="error-message" *ngIf="error">{{error}}</div>
+            </form>
+        </mat-card>
+    </div>
+
+</ng-template>
