[STYLE] Refactor edit image styling

--- a/ng-diogenes/src/app/pages/edit-item/components/edit-item-image/edit-item-image.component.scss
+++ b/ng-diogenes/src/app/pages/edit-item/components/edit-item-image/edit-item-image.component.scss
@@ -1,21 +1,3 @@
-// Image
-.item-image-container {
-    max-width: 60rem;
-    padding: 10px;
-    border: 1px solid #ccc;
-}
-
-.item-image {
-    width: 100%;
-    height: auto;
-}
-
-.item-image-buttons-container {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.item-add-new-image-container {
-    display: flex;
-    justify-content: center;
+.hidden-input {
+    display: none;
 }
