--- a/ng-diogenes/src/styles/alignment.scss
+++ b/ng-diogenes/src/styles/alignment.scss
@@ -6,6 +6,11 @@
     justify-content: center;
 }
 
+.flex-end {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .space-one-line {
     padding-top: 1rem;
 }
