--- a/ng-diogenes/src/app/shared/components/error-card/error-card.component.scss
+++ b/ng-diogenes/src/app/shared/components/error-card/error-card.component.scss
@@ -1,10 +1,3 @@
-.card {
-    margin: 1rem;
-    max-width: 70rem;
-}
-
-.center-card {
-    display: flex;
-    align-self: center;
-    justify-content: center;
+mat-card-title{
+    padding-left: 0 !important;
 }
