--- a/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
+++ b/ng-diogenes/src/app/pages/edit-item/components/edit-single-item/edit-single-item.component.html
@@ -12,7 +12,7 @@
 
     <ng-template #itemFormTemplate>
 
-        <div class="flex-center">
+        <div class="flex-center card-wrapper">
             <mat-card class="material-card-element">
 
                 <mat-card-title class="flex-center material-card-title">
