--- a/ng-diogenes/src/styles/components/item-image.scss
+++ b/ng-diogenes/src/styles/components/item-image.scss
@@ -1,7 +1,6 @@
 // This file contains the styling of the item images
 .item-image-container {
-    padding: 10px;
-    border: 1px solid #ccc;
+    padding: .5rem;
 }
 
 .item-image {
